# NanoTracker

./: .gitignore  CMakeLists.txt  make.sh  readme.txt  rk3588_monitor.sh  toolchain.cmake  update_3588.sh
include/: RKNNModel.h  nanotrack.hpp
models/: Tnanotrack_backbone.rknn  Tnanotrack_backbone_int8.rknn  Xnanotrack_backbone.rknn  Xnanotrack_backbone_int8.rknn  head.rknn  head_int8.rknn
src/: RKNNModel.cpp  main.cpp  nanotrack.cpp
